# try_poetry_streamlit

./: app.py  environment.yml  pyproject.toml
