[tool.poetry]
name = "play-poetry-streamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
transformers = "^4.46.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
